--- a/README.org
+++ b/README.org
@@ -1,5 +1,17 @@
-* Leetcode CLI Viewer
+* Leetcode CLI Viewer (LCV)
 
+** Dependency: dialog
+#+begin_src org :eval never-export
+sudo apt install dialog
+#end_src
+
+** Run
+#+begin_src org :eval never-export
+$ ./lcv.sh
+#end_src
+
+** Screenshots
+*** Problem List
 [[./png/lcv01.png]]
-
+*** Problem Description
 [[./png/lcv02.png]]
